--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     <ul class="sidenav" id="mobile-nav">
       <li><a href="#about">About Me</a></li>
       <li><a href="#understanding">Understanding</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact Me</a></li>
     </ul>
 
@@ -125,41 +124,6 @@
       </div>
     </section>
 
-    <!-- portfolio -->
-    <section id="portfolio" class="portfolio scrollspy">
-      <div class="container">
-        <h3 class="center mporto">Portfolio</h3>
-        <div class="row">
-          <div class="col m3 s12">
-            <img src="img/portfolio/1.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-          <div class="col m3 s12">
-            <img src="img/portfolio/2.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-          <div class="col m3 s12">
-            <img src="img/portfolio/3.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-          <div class="col m3 s12">
-            <img src="img/portfolio/4.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col m3 s12">
-            <img src="img/portfolio/5.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-          <div class="col m3 s12">
-            <img src="img/portfolio/6.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-          <div class="col m3 s12">
-            <img src="img/portfolio/7.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-          <div class="col m3 s12">
-            <img src="img/portfolio/8.png" class="responsive-img materialboxed" alt="gambar tidak terdeteksi" />
-          </div>
-        </div>
-      </div>
-    </section>
-
     <!-- contact me -->
     <section id="contact" class="contact grey lighten-3 scrollspy">
       <div class="container">
@@ -169,15 +133,15 @@
             <div class="card-panel grey darken-4 white-text center">
               <i class="material-icons small">email</i>
               <ul class="link-list">
-                <li><a href="https://www.instagram.com/rikorandika27/">Instagram</a></li>
-                <li><a href="https://t.me/paparazi77">Telegram</a></li>
+                <li><a href="https://www.instagram.com/rikorandikaa._/">Instagram</a></li>
+                <li><a href="https://t.me/Rikoriko100">Telegram</a></li>
                 <li><a href="https://wa.me//6288261927112">WhatsApp</a></li>
               </ul>
             </div>
             <ul class="collection with-header">
               <li class="collection-header"><h4>My Biodata</h4></li>
               <li class="collection-item">Nama : Riko Randika</li>
-              <li class="collection-item">Alamat : Binjai, Sumatera Utara</li>
+              <li class="collection-item">Prodi : Sistem Informasi</li>
               <li class="collection-item">Mahasiswa Di STMIK Kaputama</li>
             </ul>
           </div>
