--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" href="css/index.css" />
 
+    <style>
+      .instagram-link {
+        display: flex;
+        align-items: center;
+        margin: 5px 0; /* Add margin to separate the items vertically */
+      }
+
+      .instagram-link img {
+        height: 20px;
+        width: 20px;
+        margin-right: 2px;
+      }
+
+      .link-list {
+        display: flex;
+        flex-direction: column; /* Change to column for vertical alignment */
+        align-items: center;
+        justify-content: center;
+        margin: 20px 20px;
+        text-decoration: none;
+      }
+    </style>
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -128,13 +151,24 @@
       <div class="container">
         <h3 class="center">Contact Me</h3>
         <div class="row">
-          <div <center></center>
+          <div>
             <div class="card-panel grey darken-4 white-text center">
-              <i class="material-icons small">email</i>
+              <p>My Social Media : </p>
               <ul class="link-list">
-                <li><a href="https://www.instagram.com/rikorandikaa._/">Instagram</a></li>
-                <li><a href="https://t.me/Rikoriko100">Telegram</a></li>
-                <li><a href="https://wa.me//6288261927112">WhatsApp</a></li>
+                <div class="instagram-link">
+                  <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="Instagram Icon">
+                  <a href="https://www.instagram.com/rikorandikaa._/">Instagram</a>
+              </div>
+              <div class="instagram-link">
+                <img src="https://img.icons8.com/?size=100&id=16713&format=png&color=000000" alt="Whatsapp Icon">
+                <a href="https://wa.me//6288261927112">WhatsApp</a>
+            </div>
+            <div class="instagram-link">
+              <img src="https://img.icons8.com/?size=100&id=63306&format=png&color=000000" alt="Telegram Icon">
+              <a href="https://t.me/Rikoriko100">Telegram</a>
+          </div>
+                <li></li>
+                <li></li>
               </ul>
             </div>
             <ul class="collection with-header">
