--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     <div class="navbar-fixed">
       <nav class="grey darken-4">
         <div class="container">
+          <img src="https://img.icons8.com/?size=100&id=31016&format=png&color=000000" style="width: 20px; height: 20px; margin-right: 5px;" alt="Photo"><a href="indo.html">Eng</a>
+        <a href="#home" class="brand-logo">My Website</a>
+        <a href="#" data-target="mobile-nav" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
           <div class="nav-wrapper">
-            <a href="#home" class="brand-logo">My Website</a>
-            <a href="#" data-target="mobile-nav" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
               <li><a href="#about">About Me</a></li>
               <li><a href="#understanding">Understanding</a></li>
@@ -173,9 +174,9 @@
             </div>
             <ul class="collection with-header">
               <li class="collection-header"><h4>My Biodata</h4></li>
-              <li class="collection-item">Nama : Riko Randika</li>
+              <li class="collection-item">Name : Riko Randika</li>
               <li class="collection-item">Prodi : Sistem Informasi</li>
-              <li class="collection-item">Mahasiswa Di STMIK Kaputama</li>
+              <li class="collection-item">Student at STMIK Kaputama</li>
             </ul>
           </div>
           <div class="col m7 s12">
