--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
       </div>
     </section>
 
+    <img src="https://img.icons8.com/?size=100&id=31016&format=png&color=000000" style="width: 20px; height: 20px; margin-right: 5px;" alt="Photo"><a href="indo.html">Eng</a>
+
     <!-- footer -->
     <footer class="center grey darken-4 white-text footer">
       <p>Thanks for All | Copyright of Riko Randika 2023.</p>
