--- a/indo.html
+++ b/indo.html
@@ -184,7 +184,7 @@
       </div>
     </section>
 
-     <img src="https://img.icons8.com/?size=100&id=31016&format=png&color=000000" style="width: 20px; height: 20px; margin-right: 5px;" alt="Photo"><a href="index.html">Ind</a>
+     <img src="https://img.icons8.com/?size=100&id=31016&format=png&color=000000" style="width: 20px; height: 20px; margin-right: 5px;" alt="Photo"><a href="index.html">Indonesian</a>
     
     <!-- footer -->
     <footer class="center grey darken-4 white-text footer">
