--- a/indo.html
+++ b/indo.html
@@ -165,7 +165,7 @@
             </div>
             <div class="instagram-link">
               <img src="https://img.icons8.com/?size=100&id=63306&format=png&color=000000" alt="Telegram Icon">
-              <a href="https://t.me/Rikoriko100">Telegram</a>
+              <a href="https://t.me/fbiqpalzm">Telegram</a>
           </div>
                 <li></li>
                 <li></li>
